--- a/ext/gecom/ext/glfw-latest/CMakeLists.txt
+++ b/ext/gecom/ext/glfw-latest/CMakeLists.txt
@@ -19,8 +19,8 @@ set(LIB_SUFFIX "" CACHE STRING "Takes an empty string or 64. Directory where lib
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
-option(GLFW_BUILD_EXAMPLES "Build the GLFW example programs" ON)
-option(GLFW_BUILD_TESTS "Build the GLFW test programs" ON)
+option(GLFW_BUILD_EXAMPLES "Build the GLFW example programs" OFF)
+option(GLFW_BUILD_TESTS "Build the GLFW test programs" OFF)
 option(GLFW_BUILD_DOCS "Build the GLFW documentation" ON)
 option(GLFW_INSTALL "Generate installation target" ON)
 option(GLFW_DOCUMENT_INTERNALS "Include internals in documentation" OFF)
@@ -546,11 +546,13 @@ configure_file("${GLFW_SOURCE_DIR}/src/glfw3.pc.in"
 add_subdirectory(src)
 
 if (GLFW_BUILD_EXAMPLES)
-    add_subdirectory(examples)
+    #add_subdirectory(examples)
+	message(WARNING "Cannot build GLFW examples; they have been removed")
 endif()
 
 if (GLFW_BUILD_TESTS)
-    add_subdirectory(tests)
+    #add_subdirectory(tests)
+	message(WARNING "Cannot build GLFW tests; they have been removed")
 endif()
 
 if (DOXYGEN_FOUND AND GLFW_BUILD_DOCS)
